--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vue props validation logic extracted for nested validation in object and arrays.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/rubnvp/vue-props-validation/issues"
   },
-  "homepage": "https://github.com/rubnvp/vue-props-validation#readme"
+  "homepage": "https://github.com/rubnvp/vue-props-validation#readme",
+  "devDependencies": {
+    "jest": "^26.6.3"
+  }
 }
