--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "vue-props-validation",
   "version": "0.0.1",
   "description": "Vue props validation logic extracted for nested validation in object and arrays.",
-  "main": "index.js",
+  "main": "/lib/index.js",
   "scripts": {
     "test": "jest",
-    "build": "babel index.js -d lib"
+    "build": "babel ./src/index.js -d lib"
   },
   "repository": {
     "type": "git",
